--- a/Resources/TemplateSnippets/pkgcheckmodules.tmpl
+++ b/Resources/TemplateSnippets/pkgcheckmodules.tmpl
@@ -1,6 +1,8 @@
-PKG_CHECK_MODULES(%%LCLIBNAME%%, [%%PKGNAME%% >= %%PKGVERSION%%], [
-	CPPFLAGS="$CPPFLAGS $%%LCLIBNAME%%_CFLAGS"
-	LIBS="$LIBS $%%LCLIBNAME%%_LIBS"
+PKG_CHECK_MODULES(%%LCPKGNAME%%, [%%PKGNAME%% >= %%PKGVERSION%%], [
+	%%LIBNAME%%_CPPFLAGS="$%%LIBNAME%%_CPPFLAGS $%%LCPKGNAME%%_CFLAGS"
+	%%LIBNAME%%_LIBS="$%%LIBNAME%%_LIBS $%%LCPKGNAME%%_LIBS"
+	CPPFLAGS="$CPPFLAGS $%%LCPKGNAME%%_CFLAGS"
+	LIBS="$LIBS $%%LCPKGNAME%%_LIBS"
 ], [
 	AC_MSG_ERROR(You need %%PKGNAME%% >= %%PKGVERSION%% installed!)
 ])
