--- a/Resources/TemplateSnippets/pkgcheckmodules.tmpl
+++ b/Resources/TemplateSnippets/pkgcheckmodules.tmpl
@@ -3,6 +3,7 @@ PKG_CHECK_MODULES(%%LCPKGNAME%%, [%%PKGNAME%% >= %%PKGVERSION%%], [
 	%%LIBNAME%%_LIBS="$%%LIBNAME%%_LIBS $%%LCPKGNAME%%_LIBS"
 	CPPFLAGS="$CPPFLAGS $%%LCPKGNAME%%_CFLAGS"
 	LIBS="$LIBS $%%LCPKGNAME%%_LIBS"
+	FRAMEWORK_LIBS="$FRAMEWORK_LIBS $%%LCPKGNAME%%_LIBS"
 ], [
 	AC_MSG_ERROR(You need %%PKGNAME%% >= %%PKGVERSION%% installed!)
 ])
